--- a/mythesis.tex
+++ b/mythesis.tex
@@ -1320,11 +1320,11 @@ Before obtaining the final posterior probability distributions we have reduced t
 
 The same averaged steps are also used in Figure \ref{fig:acexample} where we show an example of the autocorrelation. The autocorrelations of all the six ensembles from one simulation are presented using the weights as observables (see equation \ref{eq:autocovariance}). The Figure shows the autocorrelation only approximatively since one should make sure that the ensemble averaged weights are calculated for walkers being at a same state of their sequence. We may however see that in general the correlation is not very strong, and we have reduced it by taking every fifth sample from the chain.%... Thinning we used is .... (TBD)  
 
-The results of our samplings are presented in the Figures \ref{fig:polpost}-\ref{fig:eqpostpr}. From these posterior probability distributions we can easily see how the prior information of angles $\thetas$ and $i$ improves the fits of the mass and radius of the neutron star (by comparing Figures \ref{fig:polpostpr} and \ref{fig:polpost} or Figures \ref{fig:eqpostpr} and \ref{fig:eqpost}). 
+The results of our samplings are presented in the Figures \ref{fig:polpost}-\ref{fig:eqpostpr}. From these posterior probability distributions we can easily see how the prior information of angles $\thetas$ and $i$ improves the fits of the mass and radius of the neutron star (by comparing Figures \ref{fig:polpostpr} and \ref{fig:polpost} or Figures \ref{fig:eqpostpr} and \ref{fig:eqpost}). However, the correct ratio between mass and radius (and thus the gravitational redshift) seems to be in every case well found.
 
 Without the prior information we get the highest probabilities for the lowest masses and radii since those correspond to more possible solutions in  $\thetas$ and $i$ than the highest masses and radii. In this case we are only able to get upper limits to the mass and radius. The polar and equatorial spots give very similar results compared to each other as excepted (Figures \ref{fig:polpost} and \ref{fig:eqpost}). However, they are not identical which shows that switching $\thetas$ and $i$ has a significant (but not very large) effect on the light curves of the pulsar. It seems also slightly easier to find out the correct $\thetas$-$i$ solution  in the case of the equatorial spot (although in the one-dimensional histograms the small angles give always a higher peak in the probability density because of the marginalization and the shape of two-dimensional distribution of $\thetas$-$i$). 
 
-In case of non-uniform priors for $\thetas$ and $i$ (Figures \ref{fig:polpostpr} and \ref{fig:eqpostpr}) we find the correct solutions for $\thetas$ and $i$ even though our prior distributions are not centered  around the correct values. The posterior probability distributions for the mass and radius are now also distributed on both sides of the correct values having the maximum near the correct value. Most importantly both the lower and upper limits can now be determined. 
+In case of non-uniform priors for $\thetas$ and $i$ (Figures \ref{fig:polpostpr} and \ref{fig:eqpostpr}) we find the correct solutions for $\thetas$ and $i$ even though our prior distributions are not centered  around the correct values. The posterior probability distributions for the mass and radius are now also distributed on both sides of the correct values having the maximum near the correct value. Most importantly both the lower and upper limits can now be determined.
 
 The angular size of the spot $\rho$ is found to be the closest to the correct value from all the  parameters in our sampling. The highest probability is very close to $10 \degree$ which is the value used when creating the datasets. Partly this is due to the choice to sample the distance in a quite small interval (between 2 and 3 kpc). For that reason the size of the spot cannot change very much in order to keep the observed count rate at a correct level. 
 
@@ -1373,10 +1373,16 @@ The angular size of the spot $\rho$ is found to be the closest to the correct va
 
 \section{Summary and Conclusions}
 
+We began this thesis by introducing the basic concept of neutron stars. The mass-radius relation of a neutron star was shown to be connected to the equation of state of neutron stars and thus to the properties of the nucleonic matter inside them. We introduced also accreting millisecond pulsars, a subgroup of low mass X-ray binaries, in which gas from a companion star is channeled onto to the magnetic poles of a rapidly rotating neutron star. We examined few examples of AMXPs and their outbursts during which we have observed coherent oscillations at the spinning frequency of the pulsar.
 
+The methods used to obtain constraints on mass-radius relation were showed next. We presented our pulse profile model that explains the observed coherent pulsations of AMXPs (whether or not they are during an outburst). %should distinguish between accretion and nuclear powered accreting millisecond pulsars in the text?
+The special and general relativistic effects, including light bending, time delays, and the aberration of light, haven been taken into account using the Schwarzschild-Doppler approximation. The oblate shape of the pulsar have been described by an empirical function, and the geometrical effects on the pulse profiles due to the oblateness have been taken care of. 
 
+We also presented our methods to fit observed data to the profiles obtained from the waveform calculation. We use Bayesian inference and the ensemble sampler which is in our case the most efficient way to obtain the probability distributions of pulse profile parameters given the data. Instead of real observations we used synthetic data (discussed in the Results section) to inspect and calibrate our methods and tools. The synthetic data was generated using our pulse profile model, and it was made as similar as possible with the real data of \source. The autocorrelation and burn-in phase of the samples were also discussed.
 
+Finally we obtained posterior probability distributions of the parameters with promising results. We were most interested in the distributions of mass and radius and how to get tighter constraints to those. We found that the ratio between mass and radius is found accurately, but to get independent knowledge of mass and radius is remarkably easier if we have independent knowledge of the spot-colatitude $\thetas$ and the observer inclination $i$. Without prior information we were only able to get upper limits for the mass and radius. Using non-uniform priors for $\thetas$ and $i$ we got both lower and upper limits. Prior information to these angles is excepted to be obtained from polarization measurements of AMXPs.  
 
+The next step to the work of this thesis is to add few more parameters to those that are being sampled and see if the results still remain the same. The pulse profile model may also be developed further e.g., to take account both the blakcbody and power-law parts of the spectrum. Finally we are able to do the fitting procedure to the real observations and hopefully get new constraints to the possible EOSs of neutron star.  
 
 
 
