--- a/mythesis.tex
+++ b/mythesis.tex
@@ -150,15 +150,26 @@ from pulse shape modeling}
         {Salmi, Tuomo}%
         {Mass and radius constraints for neutron stars
 from pulse shape modeling}
-        {Master's thesis, \pageref{LastPage} s., 3 Appendices}%
+        {Master's thesis, \pageref{LastPage} pp.}%s., 3 Appendices}%
         {Astronomy}% Oppiaine
-        {September 2016}%
-	Write here!
+        {November 2016}%
+
+	Neutron stars are the most compact directly observable objects. The matter inside the is at supranuclear densities. Thus the equation of state (EOS) of neutron stars describes the properties of such dense matter. Separation between numerous theoretical EOSs is possible if we are able constrain the possible masses and radii of neutron stars from observations.
+	
+In this thesis we present one method that can be used to constrain masses and radii of neutron stars. The method is suitable for accreting millisecond pulsars, where a rapidly rotating neutron star, called pulsar, accretes matter from a relatively low mass companion star, via an accretion disk, onto the magnetic poles of the neutron star. Because of the accretion, we observe radiation from two "hot spots" on the neutron star surface. This radiation is pulsating coherently at the spinning frequency of the neutron star. The exact shape of the pulses can be modeled with  theoretical model that takes into account the general and special relativistic effects via "Schwarzschild-Doppler" approximation and the oblate shape of the star due to the fast rotation. The details of this model are discussed. 
+	
+The pulse profiles carry information about the mass and radius of a neutron star since e.g., the light bending and thus pulse shapes depends much on the compactness of the star. Also other physical parameters and observing angles affects the light curves. Therefore, we use Bayesian analysis and "ensemble sampler" \ to obtain probability distributions of the different parameters, especially mass and radius. We have generated a synthetic data to test our method and fit the pulse profile to this data...  
+
+	
+	
 \end{tiivistelma}
 
 \pagenumbering{gobble}
 \section*{Acknowledgements}
-First of all, I would like to thank my supervisors Professor Juri Poutanen and Joonas Nättilä...
+First of all, I would like to thank my supervisors Professor Juri Poutanen and Joonas Nättilä for a very interesting and challenging topic. The support I got was extremely helpful, especially the theoretical advices from Juri, and the tools of analysis and all the other support from Joonas. I would also like to thank all the people in the astrophysics research group for the interesting discussions and support in
+general. Finally, I wish to thank my family and friends %and especially Laura
+for support and encouragement throughout my studies.
+ 
 \newpage
 
 \tableofcontents %Sisällysluettelo
@@ -1380,9 +1391,9 @@ The special and general relativistic effects, including light bending, time dela
 
 We also presented our methods to fit observed data to the profiles obtained from the waveform calculation. We use Bayesian inference and the ensemble sampler which is in our case the most efficient way to obtain the probability distributions of pulse profile parameters given the data. Instead of real observations we used synthetic data (discussed in the Results section) to inspect and calibrate our methods and tools. The synthetic data was generated using our pulse profile model, and it was made as similar as possible with the real data of \source. The autocorrelation and burn-in phase of the samples were also discussed.
 
-Finally we obtained posterior probability distributions of the parameters with promising results. We were most interested in the distributions of mass and radius and how to get tighter constraints to those. We found that the ratio between mass and radius is found accurately, but to get independent knowledge of mass and radius is remarkably easier if we have independent knowledge of the spot-colatitude $\thetas$ and the observer inclination $i$. Without prior information we were only able to get upper limits for the mass and radius. Using non-uniform priors for $\thetas$ and $i$ we got both lower and upper limits. Prior information to these angles is excepted to be obtained from polarization measurements of AMXPs.  
+Finally we obtained posterior probability distributions of the parameters with promising results. We were most interested in the distributions of mass and radius and how to get tighter constraints for those. We found that the ratio between mass and radius is found accurately, but to get independent knowledge of mass and radius is remarkably easier if we have independent knowledge of the spot-colatitude $\thetas$ and the observer inclination $i$. Without prior information we were only able to get upper limits for the mass and radius. Using non-uniform priors for $\thetas$ and $i$ we got both lower and upper limits. Prior information to these angles is excepted to be obtained from polarization measurements of AMXPs.  
 
-The next step to the work of this thesis is to add few more parameters to those that are being sampled and see if the results still remain the same. The pulse profile model may also be developed further e.g., to take account both the blakcbody and power-law parts of the spectrum. Finally we are able to do the fitting procedure to the real observations and hopefully get new constraints to the possible EOSs of neutron star.  
+The next step to the work of this thesis is to add few more parameters to those that are being sampled and see if the results still remain the same. The pulse profile model may also be developed further e.g., to take into account both the blakcbody and power-law parts of the spectrum. Finally we are able to fit the real observations and hopefully get new constraints to the possible EOSs of neutron star.  
 
 
 
