--- a/mythesis.tex
+++ b/mythesis.tex
@@ -163,7 +163,7 @@ from pulse shape modeling}
         {Astronomy}% Oppiaine
         {November 2016}%
 
-	Neutron stars are the most compact directly observable objects. The matter inside a neutron star is at supranuclear densities. Thus the equation of state (EOS) of neutron stars describes the properties of such dense matter. Separation between numerous theoretical EOSs is possible if we are able constrain the possible masses and radii of neutron stars from observations.
+	Neutron stars are the most compact directly observable objects. The matter inside a neutron star is at supranuclear densities. Thus the equation of state (EOS) of neutron stars describes the properties of such dense matter. Separation between numerous theoretical EOSs is possible if we are able to constrain the possible masses and radii of neutron stars from observations.
 	
 In this thesis we present one method that can be used to constrain masses and radii of neutron stars. The method is suitable for accreting millisecond pulsars, where a rapidly rotating neutron star, called a millisecond pulsar, accretes matter from a relatively low mass companion star, via an accretion disk, onto the magnetic poles of the neutron star. Because of the accretion, we observe radiation from two "hot spots" \ on the neutron star surface. This radiation is pulsating coherently at the spinning frequency of the neutron star. The exact shape of the pulses can be modeled with a  theoretical model that takes into account the general and special relativistic effects via "Schwarzschild-Doppler" \ approximation and the oblate shape of the star caused by the fast rotation. The details of this model are discussed. 
 	
@@ -550,14 +550,14 @@ and
 \ee
 The coefficients needed are given as
 \be\label{eq:azero}
-a_{0} = -0.18\epsilon_{0}+0.23\bar{\zeta}\bar{\epsilon}-0.05\bar{\epsilon}^{2}, 
+a_{0} = -0.18\bar{\epsilon}+0.23\bar{\zeta}\bar{\epsilon}-0.05\bar{\epsilon}^{2}, 
 \ee
 \be\label{eq:atwo}
-a_{2} = -0.39\epsilon_{0}+0.29\bar{\zeta}\bar{\epsilon}+0.13\bar{\epsilon}^{2},
+a_{2} = -0.39\bar{\epsilon}+0.29\bar{\zeta}\bar{\epsilon}+0.13\bar{\epsilon}^{2},
 \ee
 and
 \be\label{eq:afour}
-a_{4} = +0.04\epsilon_{0}-0.15\bar{\zeta}\bar{\epsilon}+0.07\bar{\epsilon}^{2}.
+a_{4} = +0.04\bar{\epsilon}-0.15\bar{\zeta}\bar{\epsilon}+0.07\bar{\epsilon}^{2}.
 \ee
 
 
@@ -1170,7 +1170,7 @@ the ensemble. We call them a complementary ensemble. The motivation is that the 
 %In this algorithm, we use a group or ensemble of sequences. Each member of
 %the ensemble is called a walker.
 
-One of the simplest affine invariant trial moves, and the move we use here, is the so-called stretch-move. In the stretch-move algorithm each walker is moved using only one randomly selected complementary walker (see figure \ref{fig:smove}). The move of current walker $k$ is proposed along a line between the walker itself and the complementary walker $j$ according to the distribution \cite{emceehammer}
+One of the simplest affine invariant trial moves, and the move we use here, is the so-called stretch move. In the stretch move algorithm each walker is moved using only one randomly selected complementary walker (see figure \ref{fig:smove}). The move of current walker $k$ is proposed along a line between the walker itself and the complementary walker $j$ according to the distribution \cite{emceehammer}
 \be \label{eq:smove}
 Y = X(j) + Z(X(k)-X(j)),
 \ee
@@ -1336,17 +1336,17 @@ Other prior probabilities of the parameters are kept always uniform inside their
 
 Before obtaining the final posterior probability distributions we have reduced the burn-in phase from each ensemble by removing the first $20,000$ samples from each chain. After that we still have approximately $50,000$ samples left belonging to each ensemble.  Figure \ref{fig:wexample} shows one example of the log-likelihoods of a converged chain in one of the simulations. In that Figure we use an averaged step of ensemble which is an average of $20$ (number of walkers in the ensemble) consecutive single accepted steps. However, for many ensembles we found few walkers which didn't seem to achieve convergence even after a long time (they appeared as sharp peaks in the log-likelihood plots).
 
-The same averaged steps are also used in Figure \ref{fig:acexample} where we show an example of the autocorrelation. The autocorrelations of all the six ensembles from one simulation are presented using the weights as observables (see equation \ref{eq:autocovariance}). The Figure shows the autocorrelation only approximatively since one should make sure that the ensemble averaged weights are calculated for walkers being at a same state of their sequence. We may, however, see that in general the correlation is not very strong, and we have reduced it by taking every fifth sample from the chain.%... Thinning we used is .... (TBD)  
+The same averaged steps are also used in Figure \ref{fig:acexample}, where we show an example of the autocorrelation. The autocorrelations of all the six ensembles from one simulation are presented using the weights as observables (see equation \ref{eq:autocovariance}). The Figure shows the autocorrelation only approximatively since one should make sure that the ensemble averaged weights are calculated for walkers being at a same state of their sequence. We may, however, see that in general the correlation is not very strong, and we have reduced it by taking every fifth sample from the chain.%... Thinning we used is .... (TBD)  
 
 The results of our samplings are presented in the Figures \ref{fig:polpost}-\ref{fig:eqpostpr}. From these posterior probability distributions we can easily see how the prior information of angles $\thetas$ and $i$ improves the fits of the mass and radius of the neutron star (by comparing Figures \ref{fig:polpostpr} and \ref{fig:polpost} or Figures \ref{fig:eqpostpr} and \ref{fig:eqpost}). However, the correct ratio between mass and radius (and thus the gravitational redshift) seems to be in every case well found.
 
-Without the prior information we get the highest probabilities for the lowest masses and radii, since those correspond to more possible solutions in  $\thetas$ and $i$ than the highest masses and radii. In this case we are only able to get upper limits to the mass and radius. All calculated confidence limits and most probable values are shown in Table \ref{table:conflimits}. The limits are calculated using the highest posterior probability credible intervals. In case of the polar spot, the radius is below $14$ km and the mass is below $1.7 ~\msun$ with $95 \%$ probabilities. The most probable value for radius is $9$ km and for mass $1.2 ~\msun$. In case of the equatorial spot, the radius is below $16$ km with a $95 \%$ probability, but for the mass the $95 \%$ credible interval extends until the upper limit of the sampling interval ($2.0 ~\msun$). The most probable value for radius is $9$ km and for mass $1.1 ~\msun$. 
+Without the prior information we get the highest probabilities for the lowest masses and radii, since those correspond to more possible solutions in  $\thetas$ and $i$ than the highest masses and radii. In this case we are only able to get upper limits to the mass and radius. All calculated confidence limits and most probable values are shown in Table \ref{table:conflimits}. The limits are calculated using the highest posterior probability credible intervals. In case of the polar spot, the radius is below $14$ km, and the mass is below $1.7 ~\msun$, with $95 \%$ probabilities. The most probable value for radius is $9$ km and for mass $1.2 ~\msun$. In case of the equatorial spot, the radius is below $16$ km with a $95 \%$ probability, but for the mass the $95 \%$ credible interval extends until the upper limit of the sampling interval ($2.0 ~\msun$). The most probable value for radius is $9$ km and for mass $1.1 ~\msun$. 
 
-The polar and equatorial spots give quite similar results compared to each other as expected (Figures \ref{fig:polpost} and \ref{fig:eqpost}). However, they are not identical which shows that switching $\thetas$ and $i$ has a small but significant effect on the light curves of the pulsar. It seems also slightly easier to find out the correct $\thetas-i$ solution in the case of the equatorial spot. Although, in the one-dimensional histograms the small angles give always a higher peak in the probability density because of the marginalization and the shape of two-dimensional probability distribution of $\thetas-i$. For the polar spot and $i$, the $95 \%$ credible interval is between $3 \degree$ and $77 \degree$, when the correct value is $75 \degree$. However, the $68 \%$ confidence limits are from $3 \degree$ to $63 \degree$. The $95 \%$ interval for $\thetas$ is between $3 \degree$ and $76 \degree$, when the correct value is $5 \degree$. In this case the $68 \%$ confidence limits are from $3 \degree$ to $71 \degree$. For the equatorial spot, the $95 \%$ limits are almost the same (and the correct values are switched), but we see that the probability density of $\thetas$ is distributed more towards the higher angles compared to results of the polar spot. Inclination is now also better constrained. It is between $3 \degree$ and $18 \degree$ with a $68 \%$ probability.
+The polar and equatorial spots give quite similar results compared to each other as expected (Figures \ref{fig:polpost} and \ref{fig:eqpost}). However, they are not identical which shows that switching $\thetas$ and $i$ has a small but significant effect on the light curves of the pulsar. It seems also slightly easier to find out the correct $\thetas-i$ solution in the case of the equatorial spot. Although, in the one-dimensional histograms the small angles give always a higher peak in the probability density because of the marginalization and the shape of two-dimensional probability distribution of $\thetas-i$. For the polar spot and $i$, the $95 \%$ credible interval is between $3 \degree$ and $77 \degree$, when the correct value is $75 \degree$. However, the $68 \%$ confidence limits are $3 \degree$ and $63 \degree$. The $95 \%$ interval for $\thetas$ is between $3 \degree$ and $76 \degree$, when the correct value is $5 \degree$. In this case the $68 \%$ confidence limits are from $3 \degree$ to $71 \degree$. For the equatorial spot, the $95 \%$ limits are almost the same (and the correct values are switched), but we see that the probability density of $\thetas$ is distributed more towards the higher angles compared to results of the polar spot. Inclination is now also better constrained. It is between $3 \degree$ and $18 \degree$ with a $68 \%$ probability.
 
 In case of non-uniform priors for $\thetas$ and $i$ (Figures \ref{fig:polpostpr} and \ref{fig:eqpostpr}), we find the correct solutions for $\thetas$ and $i$ even though our prior distributions are not centered  around the correct values. In case of the polar spot, $\thetas$ is now between $3 \degree$ and $9 \degree$ with a $95 \%$ probability, and $i$ is larger than $73 \degree$ with a $68 \%$ probability. In case of the equatorial spot, $i$ is between $4 \degree$ and $6 \degree$ with a $68 \%$ probability, and $\thetas$ is larger than $67 \degree$ with a $68 \%$ probability. In both cases the most probable values are close to the correct values (see the Table \ref{table:conflimits}), especially for the smaller one of the angles. The posterior probability distribution for the larger angle is almost entirely determined by the assumed prior probability distribution.  
 
-The non-uniform priors for $\thetas$ and $i$ have also a strong effect on the posterior probability distributions for the mass and the radius. They are now also distributed on both sides of the correct values having the maximum near the correct value. The prior information shifts the probability densities of mass and radius towards higher masses and radii, since the incorrect $\thetas - i$ solutions are in this case not contributing the small masses and radii so much. Most importantly both the lower and upper limits can now be determined. In case of the polar spot, the radius (correct value $12$ km) is between $11$ km and $15$ km and the mass (correct value $1.5 ~\msun$) is between $1.4 ~\msun$ and $1.8 ~\msun$ with $68 \%$ probabilities. The most probable values are $13$ km and $1.6 ~\msun$. In case of the equatorial spot and with same the confidence limits, the radius is between $10$ km and $14$ km, and the mass is between $1.2 ~\msun$ and $1.7 ~\msun$. The most probable values are $11$ km and $1.5 ~\msun$. 
+The non-uniform priors for $\thetas$ and $i$ have also a strong effect on the posterior probability distributions for the mass and the radius. They are now also distributed on both sides of the correct values having the maximum near the correct value. The prior information shifts the probability densities of mass and radius towards higher masses and radii, since the incorrect $\thetas - i$ solutions are in this case not contributing to the small masses and radii so much. Most importantly both the lower and upper limits can now be determined. In case of the polar spot, the radius (correct value $12$ km) is between $11$ km and $15$ km, and the mass (correct value $1.5 ~\msun$) is between $1.4 ~\msun$ and $1.8 ~\msun$, with $68 \%$ probabilities. The most probable values are $13$ km and $1.6 ~\msun$. In case of the equatorial spot and with same the confidence limits, the radius is between $10$ km and $14$ km, and the mass is between $1.2 ~\msun$ and $1.7 ~\msun$. The most probable values are $11$ km and $1.5 ~\msun$. 
 
 The angular size of the spot $\rho$ is found to be the closest to the correct value from all the  parameters in our sampling. The highest probability density is very close to $10 \degree$ ($\rho$ is between $6 \degree$ and $14 \degree$ at least with a $95 \%$ probability in every simulation) which is the value used when creating the datasets. Partly this is due to the choice to sample the distance in a quite small interval (between $2$ and $3$ kpc). The distance is not constrained, and that causes problems with a larger interval. An uniform posterior probability distribution for the distance is obtained using the narrow limits. For this reason the size of the spot cannot change very much in order to keep the observed count rate at a correct level.
 
@@ -1456,7 +1456,7 @@ The angular size of the spot $\rho$ is found to be the closest to the correct va
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=fpolf.pdf,width=17.0cm}}
-\caption{Posterior probability distributions of radius $\req$, mass $M$, observer inclination $i$, spot colatitude $\thetas$, spot angular size $\rho$ and distance $D$ for the polar spot with only uniform priors. The one-dimensional distributions are normalized to give $1$ as the total probability. The dark orange color shows a $68 \%$ and the light orange color a $95 \%$ highest posterior density credible interval. In the 2D posterior distributions the solid contour shows a $95 \%$ and the dashed contour a $68 \%$ highest posterior density credible region.  
+\caption{Posterior probability distributions for radius $\req$, mass $M$, observer inclination $i$, spot colatitude $\thetas$, spot angular size $\rho$, and distance $D$ for the polar spot with only uniform priors. The one-dimensional distributions are normalized to give $1$ as the total probability. The dark orange color shows a $68 \%$ and the light orange color a $95 \%$ highest posterior density credible interval. In the 2D posterior distributions the solid contour shows a $95 \%$ and the dashed contour a $68 \%$ highest posterior density credible region.  
 \label{fig:polpost}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1464,7 +1464,7 @@ The angular size of the spot $\rho$ is found to be the closest to the correct va
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=fpolprf.pdf,width=17.0cm}}
-\caption{Posterior probability distributions of radius $\req$, mass $M$, observer inclination $i$, spot colatitude $\thetas$, spot angular size $\rho$ and distance $D$ for the polar spot with non-uniform $i$ and $\thetas$ priors (shown with a blue line). The one-dimensional distributions are normalized to give $1$ as the total probability. The colors and contours are the same as in the Figure \ref{fig:polpost}. 
+\caption{Posterior probability distributions for radius $\req$, mass $M$, observer inclination $i$, spot colatitude $\thetas$, spot angular size $\rho$, and distance $D$ for the polar spot with non-uniform $i$ and $\thetas$ priors (shown with a blue line). The one-dimensional distributions are normalized to give $1$ as the total probability. The colors and contours are the same as in the Figure \ref{fig:polpost}. 
 \label{fig:polpostpr}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1474,7 +1474,7 @@ The angular size of the spot $\rho$ is found to be the closest to the correct va
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=feqf.pdf,width=17.0cm}}
-\caption{Posterior probability distributions of radius $\req$, mass $M$, observer inclination $i$, spot colatitude $\thetas$, spot angular size $\rho$ and distance $D$ for the equatorial spot with only uniform priors.The one-dimensional distributions are normalized to give $1$ as the total probability. The colors and contours are the same as in the Figure \ref{fig:polpost}.
+\caption{Posterior probability distributions for radius $\req$, mass $M$, observer inclination $i$, spot colatitude $\thetas$, spot angular size $\rho$, and distance $D$ for the equatorial spot with only uniform priors.The one-dimensional distributions are normalized to give $1$ as the total probability. The colors and contours are the same as in the Figure \ref{fig:polpost}.
 \label{fig:eqpost}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1484,7 +1484,7 @@ The angular size of the spot $\rho$ is found to be the closest to the correct va
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centerline{\epsfig{file=feqprf.pdf,width=17.0cm}}
-\caption{Posterior probability distributions of radius $\req$, mass $M$, observer inclination $i$, spot colatitude $\theta_{s}$, spot angular size $\rho$ and distance $D$ for the equatorial spot with non-uniform $i$ and $\thetas$ priors (shown with a blue line). The one-dimensional distributions are normalized to give $1$ as the total probability. The colors and contours are the same as in the Figure \ref{fig:polpost}.
+\caption{Posterior probability distributions for radius $\req$, mass $M$, observer inclination $i$, spot colatitude $\theta_{s}$, spot angular size $\rho$, and distance $D$ for the equatorial spot with non-uniform $i$ and $\thetas$ priors (shown with a blue line). The one-dimensional distributions are normalized to give $1$ as the total probability. The colors and contours are the same as in the Figure \ref{fig:polpost}.
 \label{fig:eqpostpr}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1496,14 +1496,14 @@ The angular size of the spot $\rho$ is found to be the closest to the correct va
 
 \section{Summary and Conclusions}
 
-We began this thesis by introducing the basic concept of neutron stars. The mass-radius relation of a neutron star was explained to be connected to the equation of state of neutron stars and thus to the properties of the nucleonic matter inside them. We introduced also accreting millisecond pulsars, a subgroup of low mass X-ray binaries, in which gas from a companion star is channeled onto to the magnetic poles of a rapidly rotating neutron star. We examined few examples of AMXPs and their outbursts during which we have observed coherent oscillations at the spinning frequency of the pulsar.
+We began this thesis by introducing the basic concept of neutron stars. The mass-radius relation of a neutron star was explained to be connected to the EOS of neutron stars and thus to the properties of the nucleonic matter inside them. We introduced also AMXPs, a subgroup of LMXBs, in which gas from a companion star is channeled onto to the magnetic poles of a rapidly rotating neutron star. We examined few examples of AMXPs and their outbursts during which we have observed coherent oscillations at the spinning frequency of the pulsar.
 
 The methods used to obtain constraints on mass-radius relation were shown next. We presented our pulse profile model that explains the observed coherent pulsations of AMXPs (whether or not they occur during an outburst). %should distinguish between accretion and nuclear powered accreting millisecond pulsars in the text?
 The special and general relativistic effects, including light bending, time delays, and the aberration of light, have been taken into account using the Schwarzschild-Doppler approximation. The oblate shape of the pulsar have been described with an empirical function, and the geometrical effects on the pulse profiles due to the oblateness have been taken care of. 
 
-We also presented our method to fit observed data to the profiles obtained from the waveform calculation. We used Bayesian inference and the ensemble sampler which is in our case the most efficient way to obtain the probability distributions of pulse profile parameters given the data. Instead of real observations we used synthetic data (discussed in the Results section) to inspect and calibrate our methods and tools. The synthetic data was generated using our pulse profile model, and it was made as similar as possible with the real data of \source. The autocorrelation and burn-in phase of the samples were also discussed.
+We also presented our method to fit observed data to the profiles obtained from the waveform calculation. We used Bayesian inference and the ensemble sampler which is in our case the most efficient way to obtain the probability distributions for pulse profile parameters given the data. Instead of real observations we used synthetic data (discussed in the Results section) to inspect and calibrate our methods and tools. The synthetic data was generated using our pulse profile model, and it was made as similar as possible with the real data of \source. The autocorrelation and burn-in phase of the samples were also discussed.
 
-Finally, we obtained posterior probability distributions of the parameters with promising results. We were most interested in the probability distributions of mass and radius and how to get tighter constraints for those. We found that the ratio between mass and radius is found accurately, but to get independent knowledge of mass and radius is remarkably easier if we have independent knowledge of the spot-colatitude $\thetas$ and the observer inclination $i$. Without prior information, we were only able to get upper limits for the mass and radius. Using non-uniform priors for $\thetas$ and $i$, we got both lower and upper limits. Prior information to these angles is expected to be obtained from the X-ray polarization measurements of AMXPs.  
+Finally, we obtained posterior probability distributions for the parameters with promising results. We were most interested in the probability distributions for mass and radius and how to get tighter constraints for those. We found that the ratio between mass and radius is found accurately, but to get independent knowledge of the mass and the radius is remarkably easier if we have independent knowledge of the spot-colatitude $\thetas$ and the observer inclination $i$. Without prior information, we were only able to get upper limits. Using non-uniform priors for $\thetas$ and $i$, we got both lower and upper limits. Prior information to these angles is expected to be obtained from the X-ray polarization measurements of AMXPs.  
 
 The next step to the work of this thesis is to add a few more free parameters to the ensemble sampler and see if the results still remain the same. The pulse profile model may also be developed further e.g., to take into account both the blakcbody and power-law parts of the spectrum. Finally, we are able to fit the real observations and hopefully get new constraints to the possible EOSs of neutron star.  
 
